--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <div class="large-12 columns">
         <div class="nav-bar right">
           <ul class="button-group">
-            <li><a href="#"  data-reveal-id="addModal" class="button">Add</a></li>
+            <li><a href="#"  data-reveal-id="addModal" class="button" ng-click="openModal()">Add</a></li>
         </ul>
     </div>
     <h1>Madeliefjes <small>
@@ -20,10 +20,12 @@
       <article ng-repeat="post in posts">
 
 
-        <i class="fi-x icon-medium"></i>
 
-        <h3><a href="#">[[post.title]]</a></h3>
-        <h6>Written by <a href="#">[[post.author]]</a> on [[post.createdAt]].</h6>
+        <div class="row">
+            <h3 class="large-11 columns"><a href="#">[[post.title]]</a></h3>
+            <span class="fi-x icon-medium large-1 columns right" ng-click="removeBlogPost(post)"></span>
+        </div>
+        <h6>Written by <a href="#">[[post.author]]</a> on [[post.createdAt]]</h6>
         <div class="row">
           <div class="large-6 columns">
             <p>[[post.content]]</p>
@@ -96,7 +98,7 @@
 </div>
 </div>
 <div class="row">
-<span class="button" ng-click="addBlogPost()">Submit</span>
+    <span class="button" ng-click="addBlogPost()">Submit</span>
 </div>
 
 <a class="close-reveal-modal">&#215;</a>
