filtering on categories

--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
 <div class="row">
     <div class="large-9 columns" role="content">
 
-      <article ng-repeat="post in posts">
-
-
-
+      <article ng-repeat="post in posts | filter:filterCategory">
         <div class="row">
             <h3 class="large-11 columns"><a href="#">[[post.title]]</a></h3>
             <span class="fi-x icon-medium large-1 columns right" ng-click="removeBlogPost(post)"></span>
@@ -42,7 +39,7 @@
 <aside class="large-3 columns">
   <h5>Categories</h5>
   <ul class="side-nav">
-    <li ng-repeat="category in categories"><a href="#">[[category.name]]</a></li>
+    <li ng-repeat="category in categories" ng-click="selectCategory(category)"><a href="#">[[category.name]]</a></li>
 </ul>
 <div class="panel">
     <h5>Featured</h5>
