--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
       <div class="large-12 columns">
         <div class="nav-bar right">
           <ul class="button-group">
+            <li class="button"><meteor-include src="loginButtons"></meteor-include></li>
             <li><a href="#"  data-reveal-id="addModal" class="button" ng-click="openModal()">Add</a></li>
+
         </ul>
     </div>
     <h1>Madeliefjes <small>
@@ -23,7 +25,8 @@
             <span class="fi-x icon-medium large-1 columns right" ng-click="removeBlogPost(post)"></span>
         </div>
         <h6>Written by <a href="#">[[post.author]]</a> on [[post.createdAt]]</h6>
-        <div class="row">
+
+        <div class="row" ng-if="post.category === 'Cats'">
           <div class="large-6 columns">
             <p>[[post.content]]</p>
         </div>
@@ -31,13 +34,19 @@
             <img ng-src="http://placekitten.com/g/[[getRandomInt(200,600)]]/[[getRandomInt(200,600)]]"/>
         </div>
     </div>
+    <div class="row" ng-if="post.category !== 'Cats'">
+      <div class="large-12 columns">
+        <p>[[post.content]]</p>
+    </div>
+</div>
 
-    <hr/>
+
+<hr/>
 </article>
 
 </div>
 <aside class="large-3 columns">
-  <h5>Categories</h5>
+  <h5 ng-click="selectCategory()">Categories</h5>
   <ul class="side-nav">
     <li ng-repeat="category in categories" ng-click="selectCategory(category)"><a href="#">[[category.name]]</a></li>
 </ul>
